--- a/tutorials/server/BlutoothExample1/blutooth_sample1.html
+++ b/tutorials/server/BlutoothExample1/blutooth_sample1.html
@@ -73,7 +73,7 @@
   <p>Bluetooth example 1</p>
 
 <video controls width="80%">
-  <source src="https://raw.githubusercontent.com/soifgo/soifgo/main/tutorials/server/BlutoothExample1/bluetooth_sample01.mp4" type="video/mp4">
+  <source src="bluetooth_sample01.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
