--- a/tutorials/server/BluetoothSendReceive/Bluetooth_Send_Receive.html
+++ b/tutorials/server/BluetoothSendReceive/Bluetooth_Send_Receive.html
@@ -202,7 +202,7 @@
 <img src="blue09.png" Phone Sensor "">
 
 <video controls width="100%" height="500">
-<source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/BluetoothSendReceive/Pwm1a.mp4" type="video/mp4">
+<source src="Pwm1a.mp4" type="video/mp4">
 </video>
 <h3>Practical Example: Bluetooth Send & Receive</h3>
 <p>
@@ -301,7 +301,7 @@ It provides a hands-on example of how data is exchanged and processed in practic
 </section>
 
 <video controls width="100%" height="500">
-<source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/BluetoothSendReceive/sample_bluetooth_01.mp4" type="video/mp4">
+<source src="sample_bluetooth_01.mp4" type="video/mp4">
 
 </video>
 
