--- a/tutorials/server/ESP32Server/ESP8266_wifi.html
+++ b/tutorials/server/ESP32Server/ESP8266_wifi.html
@@ -146,24 +146,24 @@ userPath = "report";
 
 <h2>Step 10: ESP8266 Setup Video</h2>
 <video controls width="100%">
-  <source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Esp8266_Setup.mp4" type="video/mp4">
+  <source src="Esp8266_Setup.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-  <a href="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Esp8266_Setup.mp4" download>📥 Download ESP8266 Setup Video</a>
+  <a href="Esp8266_Setup.mp4" download>📥 Download ESP8266 Setup Video</a>
 
 <h2>Step 11: SoifGo Design – Part 1</h2>
 <video controls width="100%">
-  <source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Design_1.mp4" type="video/mp4">
+  <source src="Design_1.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-   <a href="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Design_1.mp4" download>📥 Download SoifGo Design – Part 1</a>
+   <a href="Design_1.mp4" download>📥 Download SoifGo Design – Part 1</a>
 
 <h2>Step 12: SoifGo Design – Part 2</h2>
 <video controls width="100%">
-  <source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Design_2.mp4" type="video/mp4">
+  <source src="Design_2.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-  <a href="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/ESP32Server/Design_2.mp4" download>📥 Download SoifGo Design – Part 2</a>
+  <a href="Design_2.mp4" download>📥 Download SoifGo Design – Part 2</a>
 
   <h2>Bonus: RANGMANG Module</h2>
 
