--- a/tutorials/server/rangmang/Rangmang.html
+++ b/tutorials/server/rangmang/Rangmang.html
@@ -98,7 +98,7 @@
 
 
 <video controls width="80%" height="500">
-  <source src="https://raw.githubusercontent.com/soifgo/soifgo/refs/heads/soifgo/tutorials/server/rangmang/rangmang_dance.mp4" type="video/mp4">
+  <source src="rangmang_dance.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
 
