Update API fetching tutorial with effects section
Removed redundant explanation about extracting API keys and added a new section on applying effects based on API values.

--- a/tutorials/server/FetchingAPIs/Api-fetching.html
+++ b/tutorials/server/FetchingAPIs/Api-fetching.html
@@ -96,10 +96,7 @@
   <img src="Api-fetching2.png" alt="SoifGo Server Setup Screenshot">
 
   <h2>Step 3: Filter Complex Keys (Optional)</h2>
-  <p>If the value is embedded in a long string like 
-    If extracting an API key does not work due to malformed data, simply leave the key field empty to receive the entire dataset. 
-    Then, specify the word or phrase that comes before and after the desired value.
-    The system will filter the data between those markers and display the extracted result</p>
+  <p>If the value is embedded in a long string like </p>
     <code>temp12_Abc</code>, use filters:</p>
   <ul>
     <li><strong>Start Filter:</strong> <code>temp</code></li>
@@ -109,11 +106,27 @@
 
   <img src="Api-fetching3.png" alt="Filter Setup Screenshot">
 
+
+
+
+
   <h2>Step 4: Apply Effects Based on API Value</h2>
   <p>To trigger visual effects, set button behavior to <strong>Receive Server Value</strong>.</p>
   <p>Define a <strong>Maximum Value</strong> and configure effects in the menu.</p>
   <p>For more on effects, visit:</p>
   <p><a href="https://soifgo.github.io/soifgo/tutorials/server/Effect/effects.html">🎨 Button Effects Tutorial</a></p>
+
+
+
+
+    <p>If the value is embedded in a long string like 
+    If extracting an API key does not work due to malformed data, simply leave the key field empty to receive the entire dataset. 
+    Then, specify the word or phrase that comes before and after the desired value.
+    The system will filter the data between those markers and display the extracted result</p>
+
+   <img src="Api-fetching4.png" alt="Filter Setup Screenshot4">
+
+  
 
   <hr>
   <p style="text-align:center;">
