--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
   <section id="download">
     <h2>Download SoifGo</h2>
     <ul>
-      <li><a href="https://github.com/soifgo/soifgo/releases/download/1.22/soifgo.apk">Direct</a></li>
+      <li><a href="https://github.com/soifgo/soifgo/releases/download/1.22/soifgo.apk">soifgo.apk</a></li>
       <li><a href="https://apkpure.com/soifgo/soifgo.saeidmoghadam">Apkpure</a></li>
     </ul>
   </section>
