--- a/tutorials/server/ESP32Server/ESP8266_wifi.html
+++ b/tutorials/server/ESP32Server/ESP8266_wifi.html
@@ -146,10 +146,10 @@ userPath = "report";
 
 <h2>Step 10: ESP8266 Setup Video</h2>
 <video controls width="100%">
-  <source src="Esp8266_Setup.mp4" type="video/mp4">
+  <source src="Esp8266 Setup.mp4" type="video/mp4">
   Your browser does not support the video tag.
 </video>
-  <a href="Esp8266_Setup.mp4" download>📥 Download ESP8266 Setup Video</a>
+  <a href="Esp8266 Setup.mp4" download>📥 Download ESP8266 Setup Video</a>
 
 <h2>Step 11: SoifGo Design – Part 1</h2>
 <video controls width="100%">
